# PicoLampWiFi

./: .gitignore  .gitmodules  CMakeLists.txt  PicoLampWiFi.cpp  README.md  Rainbow.cpp  Rainbow.h  config.h  lwipopts.h  lwipopts_httpd.h  mdns_server.c  mdns_server.h
dhcpserver/: dhcpserver.cpp
fsdata/: fsdata.c  makefsdata
fsdata/fs/: 404.html  index.html  stats.json  style.css
